// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`usingCrlf.js 1`] = `
====================================options=====================================
parsers: ["babylon"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function f() {
  console.log("testing line endings");
}

=====================================output=====================================
function f() {
  console.log("testing line endings");
}

================================================================================
`;

exports[`usingCrlf.js 2`] = `
====================================options=====================================
endOfLine: "cr"
parsers: ["babylon"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function f() {
  console.log("testing line endings");
}

=====================================output=====================================
function f() {/*CR*/  console.log("testing line endings");/*CR*/}/*CR*/
================================================================================
`;

exports[`usingCrlf.js 3`] = `
====================================options=====================================
endOfLine: "crlf"
parsers: ["babylon"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function f() {
  console.log("testing line endings");
}

=====================================output=====================================
function f() {/*CR*/
  console.log("testing line endings");/*CR*/
}/*CR*/

================================================================================
`;

exports[`usingCrlf.js 4`] = `
====================================options=====================================
endOfLine: "lf"
parsers: ["babylon"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function f() {
  console.log("testing line endings");
}

=====================================output=====================================
function f() {
  console.log("testing line endings");
}

================================================================================
`;

exports[`usingLf.js 1`] = `
====================================options=====================================
parsers: ["babylon"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function f() {
  console.log("testing line endings");
}

=====================================output=====================================
function f() {
  console.log("testing line endings");
}

================================================================================
`;

exports[`usingLf.js 2`] = `
====================================options=====================================
endOfLine: "cr"
parsers: ["babylon"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function f() {
  console.log("testing line endings");
}

=====================================output=====================================
function f() {/*CR*/  console.log("testing line endings");/*CR*/}/*CR*/
================================================================================
`;

exports[`usingLf.js 3`] = `
====================================options=====================================
endOfLine: "crlf"
parsers: ["babylon"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function f() {
  console.log("testing line endings");
}

=====================================output=====================================
function f() {/*CR*/
  console.log("testing line endings");/*CR*/
}/*CR*/

================================================================================
`;

exports[`usingLf.js 4`] = `
====================================options=====================================
endOfLine: "lf"
parsers: ["babylon"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function f() {
  console.log("testing line endings");
}

=====================================output=====================================
function f() {
  console.log("testing line endings");
}

================================================================================
`;
